--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,203 +1,111 @@
+.TextWrap {
+        float: left;
+        margin: 10px;
+}
+
 * {
-
   box-sizing: border-box;
-
   text-align: center;
-
 }
 
 body {
-
   font-size: 24px;
-
   line-height: 32px;
-
   color: #ffffff;
-
-  background-image: url("../images/concrete_seamless.png");
-
+  background-image: url("https://www.toptal.com/designers/subtlepatterns/patterns/concrete_seamless.png");
 }
-
 a: link {
-
   text-decoration: none;
-
   color: #777;
-
 }
-
 #header {
-
   width: 100%;
-
   background-color: #ffffff;
-
   overflow: auto;
-
   border-style: none none solid none;
-
   border-bottom-color: #cccccc;
-
   font-family: 'Arial';
-
   font-size: 18px;
-
   color: #777777;
-
 }
-
 aside {
-
   float: left;
-
   width: 30%;
-
   margin-left: 150px;
-
   padding: 10px;
-
   background-color: #4aaaa5;
-
   color: #ffffff;
-
   text-align: center;
-
   font-family: 'Georgia';
-
   font-size: 28px;
-
 }
-
 nav {
-
   font-family: 'Arial';
-
   font-size: 12px;
-
   color: #777777;
-
 }
-
 #section-left {
-
   float: left;
-
   background-color: #ffffff;
-
   overflow: auto;
-
-  width: 50%;
-
-  height: 530px;
-
+  width: 60%;
+  height: 525px;
   margin-left: 50px; 
-
   border: 1px solid #dddddd;
-
 }
-
 h2 {
-
   font-family: "Georgia";
-
   float: top;
-
   text-align: left;
-
   font-size: 26px;
-
   border-style: none none solid none;
-
   border-bottom-color: #cccccc;
-
   color: #4aaaa5;
-
   background-color: #ffffff;
-
+  padding: 10px;
 }
-
 p {
-
   text-align: left;
-
   font-family: 'Arial';
-
-  font-size: 12px;
-
+  font-size: 13px;
   color: #777777;
-
+  padding: 20px;
 }
-
 button {
-
   background-color: #4aaaa5;
-
   color: #ffffff;
-
   font-size: 14px;
-
   font-family: 'Arial';
-
   padding: 20px;
-
-  text-align: left;
-
-  float: left;
-
-}
-
-#section-right {
-
-  float: left;
-
-  width: 20%;
-
-  margin-left: 80px;
-
-  height: 50px;
-
-  background-color: #ffffff;
-
-}
-
-h3 {
-
-  font-family: "Georgia";
-
-  border-style: none none solid none;
-
-  border-bottom-color: #cccccc;
-
-  color: #4aaaa5;
-
-  font-size: 18px;
-
-}
-
-div {
-
   text-align: center;
-
+  float: left;
 }
-
+#section-right {
+  float: left;
+  width: 20%;
+  margin-left: 80px;
+  height: 50px;
+  background-color: #ffffff;
+}
+h3 {
+  font-family: "Georgia";
+  border-style: none none solid none;
+  border-bottom-color: #cccccc;
+  color: #4aaaa5;
+  font-size: 18px;
+}
+div {
+  text-align: center;
+  padding: 10px;
+}
 footer {
-
   background-color: #666666;
-
-  padding: 20px;
-
+  padding: 10px;
   clear: both;
-
   font-family: "Arial";
-
   font-size: 10px;
-
   color: #ffffff;
-
   border-style: solid none none none;
-
   border-top-color: #4aaaa5;
-
-  border-width: 8px;
-
+  border-width: 5px;
 }
