--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,10 +39,17 @@ aside {
   font-family: 'Georgia';
   font-size: 28px;
 }
-nav {
+.nav a {
   font-family: 'Arial';
-  font-size: 12px;
+  font-size: 16px;
   color: #777777;
+  display: inline-block;
+  padding-left: 1em;
+  margin-left: 1em;
+  text-decoration: none;
+  -webkit-transition: color .4s;
+  transition: color .4s;
+  border-left: 1px solid #cccccc;
 }
 #section-left {
   float: left;
@@ -53,6 +60,13 @@ nav {
   margin-left: 50px; 
   border: 1px solid #dddddd;
 }
+#left {
+    float: left;
+}
+#right {
+  float: right;
+}
+
 h2 {
   font-family: "Georgia";
   float: top;
@@ -76,9 +90,10 @@ button {
   color: #ffffff;
   font-size: 14px;
   font-family: 'Arial';
-  padding: 20px;
   text-align: center;
   float: left;
+  margin-left: 20px;
+  padding: 10px;
 }
 #section-right {
   float: left;
@@ -94,8 +109,41 @@ h3 {
   color: #4aaaa5;
   font-size: 18px;
 }
-div {
-  text-align: center;
+.portfolio-item {
+  display: inline-block;
+  position: relative;
+  width: 300px;
+  height: 200px;
+  transition: transform .2s ease-out;
+}
+.portfolio-item:hover {
+  transform: rotate(-4deg) scale(1.1, 1.1);
+}
+.item-name {
+  position: relative;
+  top: -75px;
+  text-align: left;
+  background-color: #4aaaa5;
+  padding: 1em;
+  color: #ffffff;
+  z-index: 1000;
+}
+h4 {
+  float: left; 
+  font-family: "Georgia";
+  border-style: none none solid none;
+  border-bottom-color: #cccccc;
+  color: #4aaaa5;
+  font-size: 25px;
+  margin-left: 20px;
+  margin-left: 20px;
+}
+.left {
+  text-align: left;
+  padding: 10px;
+}
+.right{
+    text-align: left;
   padding: 10px;
 }
 footer {
